<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>SX_start</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="abcd2006abc@outlook.com">lin</maintainer>
  <license>Apache2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_bringup</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>nav_bringup</test_depend>
  <test_depend>rmu_gazebo_simulator</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
